[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/menu/menu.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/icecube.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/JosefinSans-Light.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/menu/score_label.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/menu/level_button.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 46
extra_spacing_top = 5
extra_spacing_char = 4
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 3 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
level_button = ExtResource( 5 )
score_label = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0392157, 0.145098, 0.470588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 32.0
margin_right = -32.0
margin_bottom = -32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 512.0
margin_bottom = 576.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 512.0
margin_bottom = 64.0
custom_constants/separation = 34
alignment = 1

[node name="Logo" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 96.0
margin_right = 160.0
margin_bottom = 64.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 194.0
margin_right = 415.0
margin_bottom = 64.0

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer"]
margin_top = 6.0
margin_right = 221.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.721569, 0.960784, 0.960784, 1 )
text = "Ice Cubes"

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 512.0
margin_bottom = 576.0
size_flags_vertical = 3

[node name="ButtonList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 178.0
margin_top = 170.0
margin_right = 334.0
margin_bottom = 338.0

[node name="ContinueButton" type="ToolButton" parent="MarginContainer/VBoxContainer/CenterContainer/ButtonList"]
margin_right = 156.0
margin_bottom = 39.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0.172549, 0.203922, 0.309804, 1 )
custom_colors/font_color = Color( 0.721569, 0.960784, 0.960784, 1 )
custom_colors/font_color_hover = Color( 0.870588, 1, 0.839216, 1 )
custom_colors/font_color_pressed = Color( 0.0745098, 0.329412, 0.235294, 1 )
disabled = true
enabled_focus_mode = 0
text = "Continue"

[node name="NewGameButton" type="ToolButton" parent="MarginContainer/VBoxContainer/CenterContainer/ButtonList"]
margin_top = 43.0
margin_right = 156.0
margin_bottom = 82.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0.172549, 0.203922, 0.309804, 1 )
custom_colors/font_color = Color( 0.721569, 0.960784, 0.960784, 1 )
custom_colors/font_color_hover = Color( 0.870588, 1, 0.839216, 1 )
custom_colors/font_color_pressed = Color( 0.0745098, 0.329412, 0.235294, 1 )
enabled_focus_mode = 0
text = "New game"

[node name="PickLevelButton" type="ToolButton" parent="MarginContainer/VBoxContainer/CenterContainer/ButtonList"]
margin_top = 86.0
margin_right = 156.0
margin_bottom = 125.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0.172549, 0.203922, 0.309804, 1 )
custom_colors/font_color = Color( 0.721569, 0.960784, 0.960784, 1 )
custom_colors/font_color_hover = Color( 0.870588, 1, 0.839216, 1 )
custom_colors/font_color_pressed = Color( 0.0745098, 0.329412, 0.235294, 1 )
enabled_focus_mode = 0
text = "Pick a level"

[node name="ExitButton" type="ToolButton" parent="MarginContainer/VBoxContainer/CenterContainer/ButtonList"]
margin_top = 129.0
margin_right = 156.0
margin_bottom = 168.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0.172549, 0.203922, 0.309804, 1 )
custom_colors/font_color = Color( 0.721569, 0.960784, 0.960784, 1 )
custom_colors/font_color_hover = Color( 0.870588, 1, 0.839216, 1 )
custom_colors/font_color_pressed = Color( 0.0745098, 0.329412, 0.235294, 1 )
enabled_focus_mode = 0
text = "Exit game"

[node name="LevelList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer"]
visible = false
margin_left = 144.0
margin_top = 215.0
margin_right = 367.0
margin_bottom = 292.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer/LevelList"]
margin_right = 223.0
margin_bottom = 34.0
size_flags_vertical = 3
custom_constants/separation = 32

[node name="LevelButtonList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer/LevelList/HBoxContainer"]
margin_right = 84.0
margin_bottom = 34.0

[node name="LevelButton" parent="MarginContainer/VBoxContainer/CenterContainer/LevelList/HBoxContainer/LevelButtonList" instance=ExtResource( 5 )]
text = "Level 1"

[node name="ScoreLabelList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer/LevelList/HBoxContainer"]
margin_left = 116.0
margin_right = 223.0
margin_bottom = 34.0

[node name="ScoreLabel" parent="MarginContainer/VBoxContainer/CenterContainer/LevelList/HBoxContainer/ScoreLabelList" instance=ExtResource( 4 )]
margin_right = 107.0
text = "- best score: --"

[node name="LevelListBackButton" type="ToolButton" parent="MarginContainer/VBoxContainer/CenterContainer/LevelList"]
margin_top = 38.0
margin_right = 223.0
margin_bottom = 77.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0.172549, 0.203922, 0.309804, 1 )
custom_colors/font_color = Color( 0.721569, 0.960784, 0.960784, 1 )
custom_colors/font_color_hover = Color( 0.870588, 1, 0.839216, 1 )
custom_colors/font_color_pressed = Color( 0.0745098, 0.329412, 0.235294, 1 )
enabled_focus_mode = 0
text = "Back"

[node name="NewGameDialog" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -104.0
margin_top = -35.0
margin_right = 104.0
margin_bottom = 40.0
window_title = "Start new game"
dialog_text = "This will delete your current save file. Are you sure?"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/ButtonList/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/ButtonList/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/ButtonList/PickLevelButton" to="." method="_on_PickLevelButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/ButtonList/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/LevelList/LevelListBackButton" to="." method="_on_LevelListBackButton_pressed"]
[connection signal="confirmed" from="NewGameDialog" to="." method="_on_NewGameDialog_confirmed"]
